2010-12-07  Martin Robinson  <mrobinson@igalia.com>

        Rebaseline GTK+ results after r73385.

        * platform/gtk/css1/box_properties/margin-expected.txt:
        * platform/gtk/css1/box_properties/margin_right-expected.txt:
        * platform/gtk/css1/classification/white_space-expected.txt:
        * platform/gtk/css1/color_and_background/background_attachment-expected.txt:
        * platform/gtk/css1/color_and_background/background_repeat-expected.txt:
        * platform/gtk/editing/deleting/delete-line-end-ws-001-expected.txt:
        * platform/gtk/editing/deleting/delete-line-end-ws-002-expected.txt:
        * platform/gtk/fast/backgrounds/repeat/negative-offset-repeat-expected.txt:
        * platform/gtk/fast/backgrounds/size/backgroundSize15-expected.txt:
        * platform/gtk/fast/block/margin-collapse/block-inside-inline/004-expected.txt:
        * platform/gtk/fast/block/margin-collapse/block-inside-inline/005-expected.txt:
        * platform/gtk/fast/blockflow/block-level-images-expected.txt:
        * platform/gtk/fast/blockflow/border-radius-clipping-vertical-lr-expected.txt:
        * platform/gtk/fast/blockflow/box-shadow-vertical-lr-expected.txt:
        * platform/gtk/fast/blockflow/box-shadow-vertical-rl-expected.txt:
        * platform/gtk/fast/blockflow/floats-in-block-layout-expected.txt:
        * platform/gtk/fast/borders/fieldsetBorderRadius-expected.txt:
        * platform/gtk/fast/box-shadow/basic-shadows-expected.txt:
        * platform/gtk/fast/css/negative-leading-expected.txt:
        * platform/gtk/fast/forms/basic-textareas-expected.txt:
        * platform/gtk/fast/forms/file-input-direction-expected.txt:
        * platform/gtk/fast/forms/floating-textfield-relayout-expected.txt:
        * platform/gtk/fast/frames/flattening/frameset-flattening-advanced-expected.txt:
        * platform/gtk/fast/frames/flattening/frameset-flattening-grid-expected.txt: