@@ -1,3 +1,0 @@
-PASS - "border-top-left-radius" property for "box" element at 0.25s saw something close to: 25
-PASS - "-webkit-border-top-left-radius" property for "box2" element at 0.25s saw something close to: 25
-
