@@ -32,8 +32,7 @@
       document.getElementById('outer').className = 'changed';
     }
 
-    var usePauseAPI = false;
-    runTransitionTest(expectedValues, setupTest, usePauseAPI);
+    runTransitionTest(expectedValues, setupTest, true);
   </script>
 </head>
 <body>
