@@ -32,8 +32,8 @@
       box.style.left = '100px';
     }
     
-    var usePauseAPI = false;
-    runTransitionTest(expectedValues, setupTest, usePauseAPI);
+    runTransitionTest(expectedValues, setupTest, true);
+    
   </script>
 </head>
 <body>
